--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.71.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.97.3",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
